Change deprecated methods and utilize #getFirst()