@@ -4,18 +4,19 @@ import org.json.JSONObject;
 
 import java.io.IOException;
 import java.io.InputStream;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 
 public class Visibility {
-    public void checkConditions() throws IOException {
+    public void checkConditions() throws IOException, URISyntaxException {
         System.out.println(new Utils().getTime(Utils.LogColor.YELLOW) + "Checking visibility...");
 
         JSONObject input;
         if (!StormAlerts.testing) {
-            InputStream url = new URL("https://api.weather.gov/stations/" + new Secrets().getNwsStation() + "/observations/latest").openStream();
+            InputStream url = new URI("https://api.weather.gov/stations/" + new Secrets().getNwsStation() + "/observations/latest").toURL().openStream();
             input = new JSONObject(new String(url.readAllBytes(), StandardCharsets.UTF_8));
             url.close();
 
